# Edgar

./: .gitignore  README.md  docker-compose.yml
backend/: dockerfile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/edgar/: infer_data_types.py  models.py  serializers.py  urls.py  views.py
backend/edgar/migrations/: 0001_initial.py
backend/edgar/tests/: test_conversions.py  test_infer_data_types.py  test_models.py  test_serializers.py  test_views.py
backend/rhombus/: apps.py  conversions.py  infer_data_types.py  models.py  serializers.py  urls.py  views.py
backend/rhombus/migrations/: 0001_initial.py  0002_alter_column_data_type.py  0003_alter_column_data_type.py
backend/rhombus/tests/: test_conversions.py  test_infer_data_types.py  test_models.py  test_serializers.py  test_views.py
backend/uploads/: test_format_excel_nE9PpKw.xlsx
frontend/: .eslintrc.json  dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.test.js  DataViewer.js  DataViewer.test.js  FileUploader.js  api.js  index.js  utils.js
frontend/src/components/: Button.js  Instructions.js  Pagination.js  Table.js  TableInformation.js  UploadInput.js
